--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     // implementation 'org.springframework.boot:spring-boot-starter'
+
+    // H2 Database
+    implementation 'com.h2database:h2:2.2.224'
+    // MyBatis Spring Boot Starter
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
