--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,34 @@
 spring:
   application:
     name: vibeapp
+  datasource:
+    url: jdbc:h2:file:/Users/kanggil.lee/Self-Study/vibe-coding/vibe-coding-fullstack/data/testdb;AUTO_SERVER=TRUE
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+      settings:
+        web-allow-others: true
+  sql:
+    init:
+      mode: always
+      schema-locations: classpath:schema.sql
+
+mybatis:
+  mapper-locations: classpath:mapper/**/*.xml
+  type-aliases-package: com.example.vibeapp.post
+  configuration:
+    map-underscore-to-camel-case: true
+
+logging:
+  level:
+    org.springframework.boot.autoconfigure: debug
+    org.springframework.jdbc.datasource.init: debug
+    com.example.vibeapp.post: trace
+  file:
+    name: ./logs/app.log
+
+debug: true
